# tracker-benchmark

./: LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_cli.py  test_compare.py  test_compare_logic.py  test_metrics.py  test_runner.py
tracker_benchmark/: compare.py  metrics.py  runner.py
